# ChangeLog for app-admin/perl-cleaner
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.29 2006/08/02 18:37:51 gustavoz Exp $

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-cleaner-1.04.1.ebuild:
  Stable on hppa

  19 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-cleaner-1.04.1.ebuild:
  Stable on alpha.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  perl-cleaner-1.04.1.ebuild:
  Mark 1.04.1 stable on ia64

  11 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  perl-cleaner-1.04.1.ebuild:
  Keywording sparc and amd64 stable

  01 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-cleaner-1.04.ebuild:
  Stable on alpha.

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-cleaner-1.04.ebuild:
  Stable on ia64.

  08 Jun 2006; Joshua Kinard <kumba@gentoo.org> perl-cleaner-1.04.ebuild:
  Marked stable on mips.

*perl-cleaner-1.04.1 (01 Jun 2006)

  01 Jun 2006; <mcummings@gentoo.org> +perl-cleaner-1.04.1.ebuild:
  Bug 135080 - ph-clean is removing current ph files as well.

  29 May 2006; Simon Stelling <blubb@gentoo.org> perl-cleaner-1.04.ebuild:
  stable on amd64 wrt bug 134796

  29 May 2006; Mark Loeser <halcy0n@gentoo.org> perl-cleaner-1.04.ebuild:
  Stable on x86; bug #134796

  29 May 2006; Guy Martin <gmsoft@gentoo.org> perl-cleaner-1.04.ebuild:
  Stable on hppa.

  29 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-cleaner-1.04.ebuild:
  ppc stable, bug #134796

  29 May 2006; Markus Rothe <corsair@gentoo.org> perl-cleaner-1.04.ebuild:
  Stable on ppc64; bug #134796

  29 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-cleaner-1.04.ebuild:
  Stable on sparc wrt #134796

*perl-cleaner-1.04 (28 May 2006)

  28 May 2006; <mcummings@gentoo.org> +perl-cleaner-1.04.ebuild:
  New version of perl-cleaner, with bug fixes, corrected md5, etc.

*perl-cleaner-1.03-r1 (27 May 2006)
