@@ -4,6 +4,7 @@ Hash: SHA1
 DIST perl-cleaner-1.01.tar.gz 4048 RMD160 b2d058fcebc7eb2360e1b582b65d3f236076b735 SHA1 0307659ddc49621d207f8140235d6f042fc301ed SHA256 bd1dce529ff8f343eaf6d035d386d1ea6333f0aac89e1b91637d51f3297504a7
 DIST perl-cleaner-1.03.tar.gz 4954 RMD160 c7e13896e1b0b420ae54ad947ffeba0cae0edcec SHA1 14dd279faf4c14d88ef63468f375b5a115b528e7 SHA256 59e56409ac35cb5e85718df3d306887922ab976548f28c81d4ee8aa0fe61d679
 DIST perl-cleaner-1.04.1.tar.gz 5120 RMD160 5d6b721710be2a3316fe77413bde75bcdd9e5353 SHA1 b6a99c6849b43e48e0609486bc3ea4df7666e199 SHA256 6cbc15b158c4a6162f970b393df69cad8e2fec572272aead755c5ff09547a5bb
+DIST perl-cleaner-1.04.2.tar.gz 5134 RMD160 6f8e9b677ddbb5439ddf673bddf03b7b17621f55 SHA1 1351cd5fab2963f5488fee6081108f70fbdffca9 SHA256 3c11b8987f8ff95ad98556ae61c6e481fb8bcb4ff8eaaa91081c1a542cd27c10
 DIST perl-cleaner-1.04.tar.gz 5164 RMD160 8147946008322fb06f95dd2d862c529e2efde3a1 SHA1 ce7f1ced45ac3ab30dde5392d6c4dcd9d8d07017 SHA256 5466806a96dd6f26c16a48849594ebd60629513869d2a689ddbe317eb35e5cab
 EBUILD perl-cleaner-1.01.ebuild 704 RMD160 5fed710f72007bdde9388a2815954326b9f8f2dd SHA1 19acdeeca10626222451de171663959fda3f091f SHA256 514c048f7e02dc447fe009767fc36e259d90ac7bf845cbf4766e345037e244a9
 MD5 748a3e48610be387f3968132521cc96b perl-cleaner-1.01.ebuild 704
@@ -21,14 +22,18 @@ EBUILD perl-cleaner-1.04.1.ebuild 720 RMD160 d76e0b7dd321e4d763809dde4319c754f9e
 MD5 0d136720367cfb34b78bd234bc825faa perl-cleaner-1.04.1.ebuild 720
 RMD160 d76e0b7dd321e4d763809dde4319c754f9e2f736 perl-cleaner-1.04.1.ebuild 720
 SHA256 34980f2d03dfc6e694beca194cf2e8c325405976dd1ac22f4de54a494cbd3aed perl-cleaner-1.04.1.ebuild 720
+EBUILD perl-cleaner-1.04.2.ebuild 732 RMD160 3e81db1ae0c6a46cf2b9e87d9b0614dd18ac8818 SHA1 92c1a9baa4e590ca7018010b67f46ad6e0968d8d SHA256 a698ac677dac2cd0b244279baf813e0d2b29337ce28be485d069cf2c0c7aac91
+MD5 f7b9b05a77f979836add41337d989e9a perl-cleaner-1.04.2.ebuild 732
+RMD160 3e81db1ae0c6a46cf2b9e87d9b0614dd18ac8818 perl-cleaner-1.04.2.ebuild 732
+SHA256 a698ac677dac2cd0b244279baf813e0d2b29337ce28be485d069cf2c0c7aac91 perl-cleaner-1.04.2.ebuild 732
 EBUILD perl-cleaner-1.04.ebuild 715 RMD160 707ad5de7c5efdf0c2785c426b9cf46079f823d6 SHA1 06ed2703bbdcc1644105636865ee6509d011be07 SHA256 63d7777ccca4cc99645dc7efcd2f441b988ca0f5cedb7f0d4b19a645651aaeff
 MD5 9384d2ed645ffc47bdaff302338dda39 perl-cleaner-1.04.ebuild 715
 RMD160 707ad5de7c5efdf0c2785c426b9cf46079f823d6 perl-cleaner-1.04.ebuild 715
 SHA256 63d7777ccca4cc99645dc7efcd2f441b988ca0f5cedb7f0d4b19a645651aaeff perl-cleaner-1.04.ebuild 715
-MISC ChangeLog 3983 RMD160 6fe8277124f74f78998d06a9e9775a1585b0fafa SHA1 e7a781b8992ddd79aa894329a108e7fb52705ae6 SHA256 c56bac4634cb5268298819154e968d8f004a61198558e68dfbc28af955fabc68
-MD5 8c1af2cad4dc6ea7b7edaee50e9c1ee4 ChangeLog 3983
-RMD160 6fe8277124f74f78998d06a9e9775a1585b0fafa ChangeLog 3983
-SHA256 c56bac4634cb5268298819154e968d8f004a61198558e68dfbc28af955fabc68 ChangeLog 3983
+MISC ChangeLog 4142 RMD160 6b5b70e17e3e2266d089f10129e23e5c5eded1d9 SHA1 e4c29a0474787e99ac8199df44f9d4be99833872 SHA256 1ee0c1f79dc864108d90c45be2dede3ce2ed52dd41bfb6174032d722a8d730d4
+MD5 2da3baccc35363eec8396262e005164d ChangeLog 4142
+RMD160 6b5b70e17e3e2266d089f10129e23e5c5eded1d9 ChangeLog 4142
+SHA256 1ee0c1f79dc864108d90c45be2dede3ce2ed52dd41bfb6174032d722a8d730d4 ChangeLog 4142
 MISC metadata.xml 224 RMD160 fd32d7dfd2dc8cb409642dd130cad02adfa217ed SHA1 ab59a5ad278cf42ffe2c349d0aa6f025f98b994d SHA256 7d1302c10f9b1a8ea6ce22057fa87754cbe057e6066f24086cffa88cdfc6e534
 MD5 668ee1a87f48cb2cc46f709e97c7386a metadata.xml 224
 RMD160 fd32d7dfd2dc8cb409642dd130cad02adfa217ed metadata.xml 224
@@ -48,10 +53,13 @@ SHA256 6bd710a615d09936b1d2fde0a5704571df6da80e7ef184e2878c040fee935fa3 files/di
 MD5 47adbb671fe0b04ef1f26b7c0c7a847e files/digest-perl-cleaner-1.04.1 253
 RMD160 6ff0eb3fea249a82f2351696d97acba6acd558d8 files/digest-perl-cleaner-1.04.1 253
 SHA256 5f1e49398c8d7301affd69a2db9199ebaf08fd3e68325910a5b1f9b3bd69628c files/digest-perl-cleaner-1.04.1 253
+MD5 09c924de5581af19e1f4eacdc1ca29ba files/digest-perl-cleaner-1.04.2 253
+RMD160 f1009bbbe91d25af26f21938bd1a5716523dd988 files/digest-perl-cleaner-1.04.2 253
+SHA256 190a549ed55a5662111941d37d88665d5c57a9be407a69c5fcfcff6cd0a9db70 files/digest-perl-cleaner-1.04.2 253
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFE3mqkamhnQswr0vIRAl/6AJ9IiFFVO76iJcVKYjNaqs7EyIt3igCfbk2G
-MrKjQjToTPTx2a6zdS9Pes8=
-=+myc
+iD8DBQFE5js2tG5z4I8BtQoRAh4XAKCJZKDrckdqXlKDVcz5qxjXbre8uACfb4rG
+gaTExrniBGiktLEBBQ+nPD4=
+=ol3U
 -----END PGP SIGNATURE-----
