@@ -1,0 +1,3 @@
+MD5 0d482764ae0558d765da74d7b8aafb09 perl-cleaner-1.04.2.tar.gz 5134
+RMD160 6f8e9b677ddbb5439ddf673bddf03b7b17621f55 perl-cleaner-1.04.2.tar.gz 5134
+SHA256 3c11b8987f8ff95ad98556ae61c6e481fb8bcb4ff8eaaa91081c1a542cd27c10 perl-cleaner-1.04.2.tar.gz 5134
