@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/perl-cleaner
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.29 2006/08/02 18:37:51 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.30 2006/08/18 22:12:00 mcummings Exp $
+
+*perl-cleaner-1.04.2 (18 Aug 2006)
+
+  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  +perl-cleaner-1.04.2.ebuild:
+  Bug 142940, update to h2ph calls
 
   02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   perl-cleaner-1.04.1.ebuild:
